# cryoblob

./: .gitignore  .gitlab-ci.yml  .readthedocs.yaml  Dockerfile  Makefile  README.md  cryoblade_env.yaml  pyproject.toml
.github/workflows/: docs.yml  test.yml
docs/: Makefile  requirements.txt
docs/source/: Makefile  api_reference.rst  conf.py  index.rst  tutorials.rst
scripts/: test.py
src/arm_em/: __init__.py  ad_image_ops.py  blob_detection.py  file_ops.py  image_utils.py  types.py  utilities.py
src/cryoblob/: __init__.py  ad_image_ops.py  adapt.py  blob_detection.py  blobs.py  file_ops.py  files.py  image.py  image_utils.py  multi.py  plots.py  types.py  valid.py
tests/: test_adapt.py  test_blob_detection.py  test_blobs.py  test_files.py  test_image.py  test_image_utils.py  test_multi.py  test_plots.py  test_types.py  test_utilities.py  test_valid.py
tests/.ipynb_checkpoints/: test_blob_detection-checkpoint.py
