[project]
name = "arm_em"
version = "2024.07"
description = "Particle Picking of Cryo-EM Datasets"
authors = [{name = "Debangshu Mukherjee", email = "mukherjeed@ornl.gov"}, {name = "Alexis N. Williams", email = "williamsan@ornl.gov"}, {name = "Albina Y. Borisevich", email = "albinab@ornl.gov"}]
license = {file = "LICENSE"}
maintainers = [{name = "Debangshu Mukherjee", email = "mukherjeed@ornl.gov"}]
keywords = [
    "elecron microscopy", 
    "cryoEM",
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "mrcfile==1.5.0",
    "scikit-image>=0.19.0",
    "numpy >= 1.13.0",
    "scipy >= 1.0.0",
    "matplotlib >= 2.2.0",
    "matplotlib-scalebar >= 0.5.0",
    "ipywidgets >= 8.1.0",
    "tqdm >= 4.66.0",
    "black >= 23.10.0",
    "pandas >= 2.0.0",
]

[project.optional-dependencies]
gpu = ["cupy>=11.0.0"]

[project.urls]
Homepage = "https://code.ornl.gov/arm-inititative/multi-particle-cryoem"


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
